# sea_orm_sample

./: .env  .gitignore  Cargo.toml  READMD.md
.github/workflows/: rust.yml
docker/: docker-compose.yml
entity/: Cargo.toml
entity/src/: favorite.rs  lib.rs  post.rs  post_tag.rs  tag.rs  user.rs
entity_tmp/: favorite.rs  post.rs  post_tag.rs  seaql_migrations.rs  tag.rs  user.rs
migration/src/: lib.rs  m20220416_000001_create_user_table.rs  m20220416_000002_create_post_table.rs  m20220416_000003_create_favorite_table.rs  m20220416_000004_create_tag_table.rs  m20220416_000005_create_post_tag_table.rs  m20220416_000006_create_table.rs  m20220417_000001_drop_password_index.rs  m20220430_000001_create_follower_table.rs
migration_tmp/src/: lib.rs
src/: domain.rs  entity.rs.tmp  infrastructure.rs  lib.rs  main.rs
src/application/: user.rs
src/domain/: favorite.rs  post.rs  user.rs
src/entity/: favorite.rs  follower.rs  mod.rs  post.rs  post_tag.rs  prelude.rs  seaql_migrations.rs  tag.rs  user.rs
src/infrastructure/: configure.rs  favorite.rs  post.rs  user.rs
src/presentation/: user.rs
